결제내역 페이지 css 조정 스크랩페이지 강의페이지 연결

--- a/Hobee/src/main/webapp/resources/css/admin/adminPaymentList.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminPaymentList.css
@@ -14,10 +14,15 @@ body {
 /* 메인 */
 .main-content {
     margin-left: 240px;
-    padding: 30px;
     background-color: #f9fafb;
+    margin-bottom: 30px;
 }
-
+.content-wrapper{
+	width:1400px;
+	margin: 0 auto;
+	    padding: 30px;
+	    min-height: 100vh;
+}
 /* 통계 카드 */
 .stats-container {
     display: grid;
