대시보드 최최종 수정 및 사이드바 통일, 카테고리 css 수정

--- a/Hobee/src/main/webapp/resources/css/admin/dashboard.css
+++ b/Hobee/src/main/webapp/resources/css/admin/dashboard.css
@@ -136,6 +136,7 @@ body {
 }
 .class1{cursor: pointer;}
 .class2{cursor: pointer;}
+.class3{cursor: pointer;}
 
 .text-gray-300 {
     color: #dddfeb !important;
