--- a/Hobee/src/main/webapp/resources/css/admin/adminClassList.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminClassList.css
@@ -173,7 +173,7 @@ body {
     border-radius: 16px;
     box-shadow: 0 3px 10px rgba(0,0,0,0.05);
     padding: 25px 35px;
-    max-width: 1400px;
+    width: 1400px;
     margin: 0 auto;
     overflow-x: auto;
 }
