신고하기버튼 클릭시 로그인 유도

--- a/Hobee/src/main/webapp/resources/css/community/communityDetail.css
+++ b/Hobee/src/main/webapp/resources/css/community/communityDetail.css
@@ -1050,14 +1050,12 @@ main{
     transition: 0.2s ease;
 }
 .report-btn:hover {
-    background: #ffd6da;
-    border-color: #ffb6be;
-    transform: translateY(-2px);
-    box-shadow: 0 4px 10px rgba(255, 150, 160, 0.25);
+  transform: translateY(-50%) scale(1.05); /* 확대 + 위치 유지 */
+   
 }
 
 .report-btn:active {
-    transform: translateY(0);
+    transform: translateY(-50%);
     box-shadow: none;
 }
 
